# recall

./: .envrc  Cargo.toml  Makefile  README.md  go.mod
cmd/: recall.go
cmd/recall/: main.go
internal/commands/: mod.go  rm.go  root.go  set.go
internal/path/: path.go
internal/pathutils/: path.go
internal/recall/: format.go  recall.go
src/: main.rs
