[package]
name = "recall"
version = "0.1.0"
edition = "2024"
authors = ["Rotem Horesh <horesh.rotem@gmail.com>"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
regex = "1.11"
supports-hyperlinks = "3.1.0"
gethostname = "0.5.0"

